resources/css/styles.css
/* ---------- Page setup ---------- */

* {
  margin: 0;
  padding: 0;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

html {
  color: #555;
  font-family: 'Lato', sans-serif;
  font-size: 20px;
  font-weight: 300;
  text-rendering: optimizeLegibility;
}

body {
  width: 100%;
  overflow-x: hidden;
}

.clearfix {
  zoom: 1;
}

.clearfix:after {
  content: '.';
  clear: both;
  display: block;
  height: 0;
  visibility: hidden;
}

.row {
  max-width: 1140px;
  margin: 0 auto;
}

h1, h2, h3 {
  font-weight: 300;
  text-transform: uppercase;
}

h1 {
  margin-top: 0;
  margin-bottom: 40px;
  color: #fff;
  font-size: 240%;
  word-spacing: 4px;
  letter-spacing: 1px;
}

h2 {
  font-size: 180%;
  word-spacing: 2px;
  text-align: center;
  margin-bottom: 30px;
  letter-spacing: 1px;
}

h3 {
  font-size: 110%;
  margin-bottom: 15px;
}

h2:after {
  display: block;
  height: 2px;
  background-color: #00adb5;
  content: " ";
  width: 100px;
  margin: 0 auto;
  margin-top: 30px;
}

.long-copy {
  line-height: 145%;
  width: 70%;
  margin-left: 15%;
}

.section-features .long-copy {
  margin-bottom: 10px;
  margin-top: 40px;
}

section {
  padding: 80px 0;
}

.box {
  padding: 1%;
}

.center {
  text-align: center;
}

.box p {
  font-size: 90%;
  line-height: 145%
}

/* ---------- Header ---------- */

header {
  background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/brooke-lark-229136-unsplash.jpg);
  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url(img/brooke-lark-229136-unsplash.jpg);
  background-image: -o-linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/brooke-lark-229136-unsplash.jpg);
  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/brooke-lark-229136-unsplash.jpg);
  background-size: cover;
  background-position: center;
  height: 100vh;
}

.hero-text-box {
  position: absolute;
  width: 1140px;
  top: 54%;
  left: 52%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

.logo {
  height: 100px;
  width: auto;
  float: left;
  margin-top: 20px;
  margin-left: 2%;
}

.logo-black {
  display: none;
  height: 50px;
  width: auto;
  float: left;
  margin-top: 5px;
  margin-bottom: 5px;
}

.main-nav {
  float: right;
  list-style: none;
  margin-top: 60px;
}

.main-nav li {
  display: inline-block;
  margin-left: 40px;
}

.main-nav li a:link, .main-nav li a:visited {
  padding: 8px 0;
  color: #fff;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 90%;
  border-bottom: 2px solid transparent;
  -webkit-transition: border-bottom 0.3s;
  -o-transition: border-bottom 0.3s;
  transition: border-bottom 0.3s;
}

.main-nav li a:hover, .main-nav li a:active {
  border-bottom: 2px solid #00adb5;
}

.mobile-nav-icon {
  float: right;
  margin-top: 5px;
  cursor: pointer;
  display: none;
}

.mobile-nav-icon i {
  font-size: 200%;
  color: #fff;
}

.sticky {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  background-color: rgba(255, 255, 255, 0.98);
  box-shadow: 0 2px 2px #efefef;
  z-index: 9999;
}

.sticky .main-nav li a:link, .sticky .main-nav li a:visited {
  padding: 16px 0;
  color: #555;
}

.sticky .main-nav {
  margin-top: 20px;
  font-weight: 400;
  letter-spacing: 1px;
  font-size: 96%;
}

.sticky .logo {
  display: none;
}

.sticky .logo-black {
  display: block;
}

/* ---------- Buttons ---------- */

.btn:link, .btn:visited, input[type=submit] {
  display: inline-block;
  padding: 10px 30px;
  font-weight: 300;
  border-radius: 200px;
  text-decoration: none;
  -webkit-transition: background-color 0.3s, border 0.3s, color 0.3s;
  -o-transition: background-color 0.3s, border 0.3s, color 0.3s;
  transition: background-color 0.3s, border 0.3s, color 0.3s;
}

.btn-full:link, .btn-full:visited, input[type=submit] {
  background-color: #00adb5;
  border: 1px solid #008d93;
  color: #fff;
  margin-right: 15px;
}

.btn-ghost:link, .btn-ghost:visited {
  border: 1px solid #00adb5;
  color: #fff
}

.btn:hover, .btn:active, input[type=submit]:hover, input[type=submit]:active {
  background-color: #008d93;
  cursor: pointer;
}

.btn-full:hover, .btn-full:active {
  border: 1px solid #008d93;
}

.btn-ghost:hover, .btn-ghost:active {
  border: 1px solid #00adb5;
  color: #fff;
}

/* ---------- Features ---------- */

.icon-big {
  font-size: 350%;
  display: block;
  color: #00adb5;
  margin-bottom: 10px;
}

.highlight {
  color: #00adb5;
}

/* ---------- Favorite Meals ---------- */

.section-meals {
  padding: 0;
}

.meals-showcase {
  list-style: none;
  width: 100%;
}

.meals-showcase li {
  display: block;
  float: left;
  width: 25%;
}

.meal-photo {
  width: 100%;
  margin: 0;
  overflow: hidden;
  background-color: #000;
}

.meal-photo img {
  opacity: 0.6;
  width: 100%;
  height: auto;
  -webkit-transform: scale(1.12);
  -ms-transform: scale(1.12);
  transform: scale(1.12);
  -webkit-transition: opacity 0.5s, -webkit-transform 0.5s;
  transition: opacity 0.5s, -webkit-transform 0.5s;
  -o-transition: transform 0.5s, opacity 0.5s;
  transition: transform 0.5s, opacity 0.5s;
  transition: transform 0.5s, opacity 0.5s, -webkit-transform 0.5s;
}

.meal-photo img:hover {
  -webkit-transform: scale(1.03);
  -ms-transform: scale(1.03);
  transform: scale(1.03);
  opacity: 1
}

/* ---------- How it works ---------- */

.section-steps {
  background-color: #f4f4f4;
}

.steps-box {
  margin-top: 30px;
}

.steps-box-first {
  text-align: right;
  padding-right: 3%;
}

.steps-box-last {
  text-align: left;
  padding-left: 3%;
  margin-top: 70px;
}

.app-screen {
  width: 40%
}

.works-step {
  margin-bottom: 50px
}

.works-step:last-of-type {
  margin-bottom: 80px;
}

.works-step div {
  color: #008d93;
  border: 2px solid #008d93;
  display: inline-block;
  border-radius: 50%;
  height: 55px;
  width: 55px;
  text-align: center;
  padding: 7px;
  float: left;
  font-size: 150%;
  margin-right: 25px;
}

.btn-app:link, .btn-app:visited {
  border: 0
}

.btn-app img {
  height: 50px;
  width: auto;
  margin-right: 10px;
}

/* ---------- Cities ---------- */

.box img {
  width: 100%;
  height: auto;
  margin-bottom: 15px;
  border-radius: 2%;
  -webkit-box-shadow: 1px 1px 5px #555;
  box-shadow: 1px 1px 5px #555;
}

.city-feature {
  margin-bottom: 5px;
}

.icon-small {
  margin-right: 10px;
  display: inline-block;
  width: 30px;
  text-align: center;
  color: #008d93;
  font-size: 120%;
  line-height: 120%;
  vertical-align: middle;
  margin-top: -5px;
}

a:link, a:visited {
  color: #008d93;
  text-decoration: none;
  padding-bottom: 1px;
  border-bottom: 1px solid #008d93;
  -webkit-transition: border-bottom 0.2s;
  -o-transition: border-bottom 0.2s;
  transition: border-bottom 0.2s;
  -webkit-transition: color 0.2s;
  -o-transition: color 0.2s;
  transition: color 0.2s;
}

a:hover, a:active {
  color: #00adb5;
  border-bottom: 1px solid transparent;
}

/* ---------- Testimonials ---------- */

.section-testimonials {
  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.8)), to(rgba(0, 0, 0, 0.8))), url(img/lily-banse-365344-unsplash.jpg);
  background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(img/lily-banse-365344-unsplash.jpg);
  background-image: -o-linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(img/lily-banse-365344-unsplash.jpg);
  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(img/lily-banse-365344-unsplash.jpg);
  background-size: cover;
  color: #fff;
}

blockquote {
  padding: 2%;
  font-style: italic;
  line-height: 145%;
  margin-top: 40px;
  position: relative;
}

blockquote:before {
  content: "\201C";
  font-size: 500%;
  display: block;
  position: absolute;
  top: -5px;
  left: -10px;
}

cite {
  font-size: 90%;
  margin-top: 25px;
  display: block;
}

cite img {
  height: 50px;
  border-radius: 50%;
  margin-right: 10px;
  vertical-align: middle;
}

/* ---------- Pricing ---------- */

.section-plans {
  background-color: #f4f4f4;
}

#blu1, #blu2 {
  color: #00adb5;
}

#blu1:hover, #blu2:hover {
  color: #fff;
  background-color: #00adb5;
}

.plan-box {
  background-color: #fff;
  border-radius: 5px;
  width: 90%;
  margin-left: 5%;
  -webkit-box-shadow: 1px 1px 5px #9E9E9E;
  box-shadow: 1px 1px 5px #9E9E9E;
}

.plan-box div {
  padding: 15px;
  border-bottom: 1px solid #e8e8e8;
}

.plan-box div:first-child {
  background-color: #fcfcfc;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
}

.plan-box div:last-child {
  text-align: center;
  border: none;
}

.plan-price {
  font-size: 300%;
  margin-bottom: 10px;
  font-weight: 100;
  color: #00adb5;
}

.plan-price span {
  font-size: 30%;
  font-weight: 300;
}

.plan-price-meal {
  font-size: 80%
}

.plan-box ul {
  list-style: none;
}

.plan-box ul li {
  padding: 5px 0;
}

/* ---------- Contact ---------- */

.contact-form {
  width: 60%;
  margin: 0 auto;
}

input[type=text], input[type=email], select, textarea {
  width: 100%;
  padding: 7px;
  border-radius: 3px;
  border: 1px solid #ccc;
  color: inherit;
  font: inherit;
}

option {
  color: inherit;
  font: inherit;
}

textarea {
  height: 100px;
}

input[type=checkbox] {
  margin: 10px 5px 10px 0;
}

*:focus {
  outline: none;
}

/* ---------- Footer ---------- */

footer {
  background-color: #333;
  padding: 50px;
  font-size: 80%;
  font-weight: 400;
}

.footer-nav {
  list-style: none;
  float: left;
}

.social-links {
  list-style: none;
  float: right;
}

.footer-nav li, .social-links li {
  display: inline-block;
  margin-right: 20px;
}

.footer-nav li:last-child, .social-links li:last-child {
  margin-right: 0;
}

.footer-nav li a:link, .footer-nav li a:visited, .social-links li a:link, .social-links li a:visited {
  text-decoration: none;
  border: 0;
  color: #888;
  -webkit-transition: color 0.2s;
  -o-transition: color 0.2s;
  transition: color 0.2s;
}

.footer-nav li a:hover, .footer-nav li a:active {
  color: #ddd;
}

.social-links li a:link, .social-links li a:visited {
  font-size: 160%;
}

.ion-social-facebook, .ion-social-twitter, .ion-social-googleplus, .ion-social-instagram {
  -webkit-transition: color 0.2s;
  -o-transition: color 0.2s;
  transition: color 0.2s;
}

.ion-social-facebook:hover {
  color: #3b5998;
}

.ion-social-twitter:hover {
  color: #00aced;
}

.ion-social-googleplus:hover {
  color: #dd4b39;
}

.ion-social-instagram:hover {
  color: #517fa4;
}

footer p {
  color: #888;
  text-align: center;
  margin-top: 20px;
}

/* ----- Animations ----- */

.animated {
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

@-webkit-keyframes pulse {
  0% {
    -webkit-transform: scale3d(1, 1, 1);
    transform: scale3d(1, 1, 1);
  }
  50% {
    -webkit-transform: scale3d(1.05, 1.05, 1.05);
    transform: scale3d(1.05, 1.05, 1.05);
  }
  100% {
    -webkit-transform: scale3d(1, 1, 1);
    transform: scale3d(1, 1, 1);
  }
}

@keyframes pulse {
  0% {
    -webkit-transform: scale3d(1, 1, 1);
    transform: scale3d(1, 1, 1);
  }
  50% {
    -webkit-transform: scale3d(1.05, 1.05, 1.05);
    transform: scale3d(1.05, 1.05, 1.05);
  }
  100% {
    -webkit-transform: scale3d(1, 1, 1);
    transform: scale3d(1, 1, 1);
  }
}

.pulse {
  -webkit-animation-name: pulse;
  animation-name: pulse;
}

@-webkit-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.fadeIn {
  -webkit-animation-name: fadeIn;
  animation-name: fadeIn;
}

.js--wp-1, .js--wp-2, .js--wp-3, .js--wp-4 {
  opacity: 0;
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
}

.js--wp-1.animated, .js--wp-2.animated, .js--wp-3.animated, .js--wp-4.animated {
  opacity: 1;
}

